fix: Fix docker build and publish action(#7)